# football-modeling

./: .gitignore  20_figures  README.md  environment.yml
.github/workflows/: run__BuildFeatures.yml  run__BuildFeaturesOOS.yml  run__SFM.yml  run__WebScrape.yml  run__WebScrapeOOS.yml
00_code/: ReadMe
00_code/001_SFM/: ReadMe  SFM_DataPrep.ipynb
00_code/002_SFM/: 021_SFM_BART.ipynb  ReadMe.txt
00_code/00_GitHubActions/: 001_webscrapOOS.py  001_webscrapeOOS.py  00_webscrap.py  00_webscrape.py  011_buildfeaturesOOS.py  01_buildfeatures.py
01_SFM/00_code/001_SFM/: ReadMe  SFM_PAR_v1.ipynb
01_SFM/00_code/002_SFM/: ReadMe.txt
01_SFM/10_data/: ReadMe
02_CausalAI/: README.md  causal_eda.py  environment.yml  pyproject.toml
02_CausalAI/00_code/: soccer_substitution_eda.py  soccer_substitution_simulation.py
02_CausalAI/10_data/: data_StatsBomb__byMatch_bySub.csv
02_CausalAI/20_figures/: ReadMe
02_CausalAI/40_literature/: README.txt
02_CausalAI/causalai/: __init__.py  auxiliaries.py  eda.py  simulation.py  simulation__.py
02_CausalAI/notebooks/: 011_getData__WGAN.ipynb  01_causal_eda.ipynb  01_getData__Statsbomb.ipynb  02_causal_eda.ipynb  030_causal_empData.ipynb  03_causal_empData.ipynb
03_SFMMO/: ReadMe.txt
03_SFMMO/00_code/: ReadMe.txt  SFMMOwm__dev_EW.ipynb
03_SFMMO/10_data/: ReadMe.txt
10_data/100_RawData/: ReadMe.txt
10_data/101_SFM/: Players_v240622.txt  ReadMe  SFM_data.csv  SFM_data_byPlayer__OOS.csv  SFM_data_byPlayer__OOS__currentTEAM.csv  SFM_data_by_team.csv
30_literature/: ReadMe
40_submissions/MIT_Sloan_2025/: SFM_Abstract.docx
(+50 files in other folders)
