[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causalai"
version = "0.1.0"
description = "Causal analysis tools for soccer substitution impact"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Alexandre Andorra"}
]
keywords = ["causal-inference", "soccer", "sports-analytics", "data-science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.8"

[project.urls]
Repository = "https://github.com/AlexAndorra/football-modeling/tree/main/02_CausalAI"

[tool.setuptools.packages.find]
where = ["."]
include = ["causalai*"]
exclude = ["notebooks*", "tests*", "docs*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml"]

# Development tools configuration
[tool.nbqa.mutate]
isort = 1
black = 1
pyupgrade = 1

[tool.ruff]
line-length = 100
target-version = "py310"
fix = true